--- a/packages/utils/package.json
+++ b/packages/utils/package.json
@@ -21,5 +21,10 @@
   "homepage": "https://github.com/qlik-oss/after-work.js#readme",
   "files": [
     "/src"
-  ]
+  ],
+  "dependencies": {
+    "npmlog": "4.1.2",
+    "debug": "4.0.1",
+    "import-cwd": "2.1.0"
+  }
 }
